src/styles/index.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');

* {
    font-family: 'Roboto', sans-serif;
    overflow: overlay;
}

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

::-webkit-scrollbar {
    border-radius: 10px;
    width: 0.5rem;
    height: 0.5rem;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background-color: lighten(#352F44, 3%);
}

::-webkit-scrollbar-thumb:hover {
    background-color: lighten(#352F44, 5%);
}

